--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -2,7 +2,7 @@
     margin-bottom: 5%;
     /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
     // flex: 0 0 auto;
-    margin-top: 83px;
+    margin-top: 50px;
     .footer-content {
         position: relative;
         display: flex;
@@ -26,12 +26,18 @@
             line-height: 1.1;
             margin-bottom: 10px;
         }
+        @media (max-width: $tableWidth) {
+            font-size: 2rem;
+        }
     }
     h3 {
         line-height: 0.9;
         color: $default-color;
         @media (max-width: $desktopWidth) {
             font-size: 1.5rem;
+        }
+        @media (max-width: $tableWidth) {
+            font-size: 1rem;
         }
     }
     .checkbox {
@@ -58,8 +64,8 @@
         background-color: $footerBg;
         padding: 40px 0 30px 0;
     }
-    @media (max-width: $smTableWidth) {
-        padding: 40px 0 0 0;
+    @media (max-width: $tableWidth) {
+        padding: 15px 0 0 0;
         .subscr {
             width: 100%;
         }
